--- a/kelabros/components/dryFruits.html
+++ b/kelabros/components/dryFruits.html
@@ -22,61 +22,61 @@
   <div class="dryfruits">
     <div class="card protypes">
       <h3>Dry Fruit 1</h3>
-      <div class="container">
+      <div id="dryFruit1" class="container">
         <div class="products row">
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit1Content1">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit1Content1" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Dry Fruits One</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit1Content2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit1Content2" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Dry Fruits Two</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit1Content3">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit1Content3" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Dry Fruits Three</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit1Content4">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit1Content4" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Dry Fruits Four</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit1Content5">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit1Content5" data-parent="#dryFruit1">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Dry Fruits Five</h2>
             </div>
           </div>
         </div>
         <div class="products row">
-          <div class="collapse multi-collapse" id="dryFruit1Content1">
+          <div class="collapse multi-collapse" id="dryFruit1Content1" data-parent="#dryFruit1">
             <div class="card card-body">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content2">
+          <div class="collapse multi-collapse" id="dryFruit1Content2" data-parent="#dryFruit1">
             <div class="card card-body">
               Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content3">
+          <div class="collapse multi-collapse" id="dryFruit1Content3" data-parent="#dryFruit1">
             <div class="card card-body">
               Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content4">
+          <div class="collapse multi-collapse" id="dryFruit1Content4" data-parent="#dryFruit1">
             <div class="card card-body">
               Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit1Content5">
+          <div class="collapse multi-collapse" id="dryFruit1Content5" data-parent="#dryFruit1">
             <div class="card card-body">
               Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
@@ -87,39 +87,39 @@
 
     <div class="card protypes">
       <h3>Walnuts</h3>
-      <div class="container">
+      <div id="dryFruit2" class="container">
         <div class="products row">
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit2Content1">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit2Content1" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Walnuts One</h2>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit2Content2">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit2Content2" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Walnuts Two</h2>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit2Content3">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit2Content3" data-parent="#dryFruit2">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Walnuts Three</h2>
             </div>
           </div>
         </div>
         <div class="products row">
-          <div class="collapse multi-collapse" id="dryFruit2Content1">
+          <div class="collapse multi-collapse" id="dryFruit2Content1" data-parent="#dryFruit2">
             <div class="card card-body">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit2Content2">
+          <div class="collapse multi-collapse" id="dryFruit2Content2" data-parent="#dryFruit2">
             <div class="card card-body">
               Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit2Content3">
+          <div class="collapse multi-collapse" id="dryFruit2Content3" data-parent="#dryFruit2">
             <div class="card card-body">
               Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
@@ -130,61 +130,61 @@
 
     <div class="card protypes">
       <h3>Almonds</h3>
-      <div class="container">
+      <div id="dryFruit3" class="container">
         <div class="products row">
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit3Content1">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit3Content1" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Almonds One</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit3Content2">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit3Content2" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Almonds Two</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit3Content3">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit3Content3" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Almonds Three</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit3Content4">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit3Content4" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Almonds Four</h2>
             </div>
           </div>
-          <div class="col-lg-2">
-            <div data-toggle="collapse" data-target="#dryFruit3Content5">
+          <div class="col-lg-2 col-md-4 col-sm-6">
+            <div data-toggle="collapse" data-target="#dryFruit3Content5" data-parent="#dryFruit3">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Almonds Five</h2>
             </div>
           </div>
         </div>
         <div class="products row">
-          <div class="collapse multi-collapse" id="dryFruit3Content1">
+          <div class="collapse multi-collapse" id="dryFruit3Content1" data-parent="#dryFruit3">
             <div class="card card-body">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content2">
+          <div class="collapse multi-collapse" id="dryFruit3Content2" data-parent="#dryFruit3">
             <div class="card card-body">
               Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content3">
+          <div class="collapse multi-collapse" id="dryFruit3Content3" data-parent="#dryFruit3">
             <div class="card card-body">
               Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content4">
+          <div class="collapse multi-collapse" id="dryFruit3Content4" data-parent="#dryFruit3">
             <div class="card card-body">
               Content IV Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit3Content5">
+          <div class="collapse multi-collapse" id="dryFruit3Content5" data-parent="#dryFruit3">
             <div class="card card-body">
               Content V Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
@@ -196,39 +196,39 @@
     <div class="card protypes">
       <h3>Cashew</h3>
 
-      <div class="container">
+      <div id="dryFruit4" class="container">
         <div class="products row">
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit4Content1">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit4Content1" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Cashew One</h2>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit4Content2">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit4Content2" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Cashew Two</h2>
             </div>
           </div>
-          <div class="col-lg-3">
-            <div data-toggle="collapse" data-target="#dryFruit4Content3">
+          <div class="col-lg-3 col-md-3 col-sm-3">
+            <div data-toggle="collapse" data-target="#dryFruit4Content3" data-parent="#dryFruit4">
               <img src="images/bg1.jpg" class="rounded-circle" alt="Cinque Terre" width="150" height="150">
               <h2>Cashew Three</h2>
             </div>
           </div>
         </div>
         <div class="products row">
-          <div class="collapse multi-collapse" id="dryFruit4Content1">
+          <div class="collapse multi-collapse" id="dryFruit4Content1" data-parent="#dryFruit4">
             <div class="card card-body">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit4Content2">
+          <div class="collapse multi-collapse" id="dryFruit4Content2" data-parent="#dryFruit4">
             <div class="card card-body">
               Content II Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
           </div>
-          <div class="collapse multi-collapse" id="dryFruit4Content3">
+          <div class="collapse multi-collapse" id="dryFruit4Content3" data-parent="#dryFruit4">
             <div class="card card-body">
               Content III Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
             </div>
@@ -236,6 +236,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
   <div id="footer">
