--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -1,7 +1,3 @@
-body {
-  /* background-color: #87431d;/*f0a500*/
-}
-
 /* Navigation Bar */
 
 .navbar {
@@ -9,8 +5,6 @@ body {
   margin:0;
   background:#542410;
   z-index: 999999;
-  /*background-color:saddlebrown;*/
-
 }
 
 #navbarTogglerDemo02{
@@ -42,7 +36,6 @@ max-width:130px;
 
 #header a{
   font-size: 1.5rem;
- /* margin: 2%;*/
 }
 
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
@@ -59,7 +52,6 @@ max-width:130px;
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
 .container {
-  /*image-orientation: inherit;*/
   width: 100%;
   max-width: 100%;
   text-align: center;
@@ -115,7 +107,6 @@ max-width:130px;
 }
 
 .recommendedProductsRow {
-  /* background-color: #f0a500; */
   padding: 1%;
 }
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
@@ -165,7 +156,7 @@ max-width:130px;
 }
 
 .testimonialSection {
-  background-color: #290001;/*87431d*/
+  background-color: #290001;
   margin: 1%;
 }
 
@@ -207,7 +198,6 @@ max-width:130px;
 /* contact  */
 
 .cont-details{
-/* background-color: #c87941; */
 text-align: left;
 font-size: 15px;
 
@@ -219,7 +209,6 @@ font-size: 15px;
   width: 50%;
   position: fixed;
   z-index: 1;
-  /* top: 0; */
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -281,7 +270,9 @@ font-size:2.5em;
 
 .card {
   border-radius: 5px;
+  box-shadow: 2px 2px grey;
 }
+
 #dryFruitsHeader{
 background-color:light-cyan;
 }
