--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -198,9 +198,8 @@ max-width:130px;
 /* contact  */
 
 .cont-details{
-text-align: left;
-font-size: 15px;
-
+/* text-align: left;
+font-size: 15px; */
 }
 
 .cont-details h3{
@@ -210,14 +209,14 @@ font-size: 15px;
 .contact-left {
   left: 0;
   background-color: #c87941;
-  padding: 8% 5% 5% 10%;
+  /* padding: 8% 5% 5% 10%; */
 }
 
 /* Control the right side */
 .contact-right {
   right: 0;
   background-color: #c87941;
-    padding: 8% 5% 5% 5%;
+    /* padding: 8% 5% 5% 5%; */
 }
 
 .contact-block {
@@ -259,6 +258,17 @@ font-size: 15px;
 .contact-map h3{
   border-radius: 5px;
   margin-bottom: 2%;
+}
+
+.mapouter {
+  position: relative;
+  text-align: center;
+  max-width: 100%;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  max-width: 100%;
 }
 /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 
