--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -196,12 +196,6 @@ max-width:130px;
 /* /////////////////////////////// */
 
 /* contact  */
-
-.cont-details{
-/* text-align: left;
-font-size: 15px; */
-}
-
 .cont-details h3{
   border-radius: 5px;
 }
@@ -209,6 +203,7 @@ font-size: 15px; */
 .contact-left {
   left: 0;
   background-color: #c87941;
+  padding: 5%;
   /* padding: 8% 5% 5% 10%; */
 }
 
@@ -216,6 +211,7 @@ font-size: 15px; */
 .contact-right {
   right: 0;
   background-color: #c87941;
+  padding: 5%;
     /* padding: 8% 5% 5% 5%; */
 }
 
