--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -15,7 +15,7 @@
                 <a class="nav-link" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">ABOUT</a>
+                <a class="nav-link" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="">WHAT WE OFFER</a>
