--- a/kelabros/components/stylesheets/style.css
+++ b/kelabros/components/stylesheets/style.css
@@ -31,6 +31,14 @@
 padding-right:15%;
 }
 
+.navbar-toggler {
+  margin-right: 25%;
+}
+
+.navbar-toggler-icon {
+  color: saddlebrown;
+}
+
 .navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
