--- a/kelabros/components/Header.html
+++ b/kelabros/components/Header.html
@@ -5,7 +5,7 @@
     </div>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="fa fa-bars" aria-hidden="true"></i></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
